<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/device_name"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/new_device_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:background="@drawable/main_button"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/device_type"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/device_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:entries="@array/device_types_array"
            android:prompt="@string/choose_device_type"
            android:background="@drawable/main_button"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/space_add"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_accept_new_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/space_add"
        android:layout_alignBottom="@+id/space_add"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_check_white_36dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_cancel_new_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/space_add"
        android:layout_alignBottom="@+id/space_add"
        android:layout_gravity="start|bottom"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_close_white_36dp" />

</RelativeLayout>
